user verification with otp done

--- a/src/views/verification_email.ejs
+++ b/src/views/verification_email.ejs
@@ -112,7 +112,8 @@
                       >
                         <%= bodyDescription %>
                       </p>
-                      <form action="<%=link%>" target="_blank" method="POST">
+                      Otp <%= token %>
+                      <!-- <form action="<%=link%>" target="_blank" method="POST">
                         <input
                           type="hidden"
                           name="token"
@@ -134,7 +135,7 @@
                         >
                           <%= button %>
                         </button>
-                      </form>
+                      </form> -->
                     </td>
                   </tr>
                   <tr>
